techs and skills size fixed and techs wrap added

--- a/src/scss/components/Resume.scss
+++ b/src/scss/components/Resume.scss
@@ -20,9 +20,8 @@
             //background-color: rgb(207, 230, 236);
             background-color: rgb(228, 244, 248);
             border: 2px solid rgb(44, 42, 44);
-            //width: 30%;
+            width: 50vw;
             padding: 10px; 
-            //justify-self: center;
     
             &--title{
                 //border: 1px solid white;
@@ -43,6 +42,8 @@
                 // align-content: center;
                 // text-align: center;
                 gap: 20px;
+                display: flex;
+                flex-wrap: wrap;
 
                 // .techIcon{
                 //     font-size: 30px;
@@ -87,7 +88,7 @@
                     -webkit-background-clip: text;
                     -webkit-text-fill-color: transparent;
                     font-weight: bold;
-                    font-size: 22px;
+                    font-size: 24px;
                     //text-shadow: 0px 0px 9px rgb(179, 197, 198);
                 }
 
